--- a/Code/WorkSpeed.DesktopClient/Views/MainWindow.xaml
+++ b/Code/WorkSpeed.DesktopClient/Views/MainWindow.xaml
@@ -4,14 +4,39 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WorkSpeed.DesktopClient"
+        xmlns:views="clr-namespace:WorkSpeed.DesktopClient.Views"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        <TextBlock VerticalAlignment="Center"
-                   HorizontalAlignment="Center"
-                   FontSize="47"
-                   >
-            MainWindow
-        </TextBlock>
-    </Grid>
+    <DockPanel>
+
+        <Menu DockPanel.Dock="Top">
+            <MenuItem>
+                <MenuItem.Header>
+                    <Border>
+                        <TextBlock Text="File" />
+                    </Border>
+                </MenuItem.Header>
+            </MenuItem>
+        </Menu>
+
+        <StatusBar DockPanel.Dock="Bottom" Height="24">
+            <Border>
+                <TextBlock Text="{Binding StatusBarText}" />
+            </Border>
+        </StatusBar>
+
+        <TabControl>
+            <TabItem>
+                <TabItem.Header>
+                    <Border>
+                        <TextBlock Text="Import Data" />
+                    </Border>
+                </TabItem.Header>
+
+                <views:ImportDataUserControl Content="{Binding DataImport}" />
+
+            </TabItem>
+        </TabControl>
+
+    </DockPanel>
 </Window>
