--- a/Code/WorkSpeed.DesktopClient/Views/MainWindow.xaml
+++ b/Code/WorkSpeed.DesktopClient/Views/MainWindow.xaml
@@ -33,7 +33,7 @@
                     </Border>
                 </TabItem.Header>
 
-                <views:ImportDataUserControl Content="{Binding DataImport}" />
+                <views:ImportDataUserControl Content="{Binding ImportVm}" />
 
             </TabItem>
         </TabControl>
