--- a/Code/WorkSpeed.DesktopClient/Views/ImportDataUserControl.xaml
+++ b/Code/WorkSpeed.DesktopClient/Views/ImportDataUserControl.xaml
@@ -8,13 +8,13 @@
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="200" />
+            <!--<ColumnDefinition Width="200" />-->
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
 
-        <ListBox ItemsSource="{Binding Stages}" />
+        <!--<ListBox ItemsSource="{Binding Stages}" />-->
 
-        <ContentControl Grid.Column="1">
+        <ContentControl Grid.Column="0">
             <Grid Margin="10">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*" />
@@ -23,7 +23,7 @@
                 </Grid.RowDefinitions>
 
                 <StackPanel Orientation="Horizontal"
-                            HorizontalAlignment="Center"
+                            HorizontalAlignment="Left"
                             VerticalAlignment="Center"
                             >
                     <Border BorderBrush="Blue" BorderThickness="0,0,0,1" 
@@ -33,7 +33,8 @@
                                    />
                     </Border>
 
-                    <Button Margin="10,0,0,0"
+                    <Button x:Name="m_OpenFileButton" Margin="10,0,0,0"
+
                             >
                         <Button.Content>
                             <Border VerticalAlignment="Stretch" Padding="2">
@@ -44,12 +45,12 @@
                 </StackPanel>
 
                 <StackPanel Grid.Row="1">
-                    <Expander ExpandDirection="Down" Header="Table" IsExpanded="True">
+                    <Expander ExpandDirection="Down" Header="Table">
                         <ScrollViewer Height="300" 
                                       VerticalScrollBarVisibility="Auto"
                                       HorizontalScrollBarVisibility="Auto"
                                       >
-                            <DataGrid Margin="0,10,0,0"
+                            <DataGrid
                               HorizontalAlignment="Stretch"
                               VerticalAlignment="Stretch"
                               ItemsSource="{Binding Operations}"
