--- a/Code/WorkSpeed.DesktopClient/Resources/DataTemplates.xaml
+++ b/Code/WorkSpeed.DesktopClient/Resources/DataTemplates.xaml
@@ -1,5 +1,79 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     >
-    <DataTemplate x:Key="dt_ImportStage"></DataTemplate>
+    <DataTemplate x:Key="dt_ImportStage">
+        <Grid VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="0.1*" MinHeight="50" />
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+
+            <Border Margin="10,5" Height="Auto">
+                <TextBlock FontSize="24"
+                       FontWeight="DemiBold"
+                       Foreground="{StaticResource br_ListBoxBackground}"
+                       Text="{Binding Header}"
+                       ></TextBlock>
+            </Border>
+
+            <Grid Grid.Row="1" MaxWidth="300">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="60" />
+                    <RowDefinition Height="26"/>
+                    <RowDefinition Height="3*" />
+                </Grid.RowDefinitions>
+
+                <!-- File -->
+                <StackPanel Grid.Row="1"
+                        Orientation="Horizontal"
+                        HorizontalAlignment="Center"
+                        VerticalAlignment="Center"
+                        >
+                    <Border BorderBrush="Blue" 
+                        BorderThickness="0,0,0,1" 
+                        SnapsToDevicePixels="True"
+                        >
+                        <TextBlock Text="{Binding FileName}"
+                               MinWidth="200"
+                               />
+                    </Border>
+
+                    <Button x:Name="m_OpenFileButton" Margin="10,0,0,0" 
+                        BorderThickness="0" 
+                        BorderBrush="Transparent"
+                        Background="Transparent"
+                        Height="30"
+                        Style="{x:Null}"
+                        Command="{Binding OpenCommand}"
+                        >
+                        <Image Source="{DynamicResource im_OpenFile}" 
+                           RenderOptions.EdgeMode="Aliased"
+                           RenderOptions.BitmapScalingMode="Fant"
+                           />
+                    </Button>
+                </StackPanel>
+
+                <TextBlock Grid.Row="2" Text="{Binding Info}" />
+
+                <Grid Grid.Row="3" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" >
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition />
+                        <ColumnDefinition />
+                    </Grid.ColumnDefinitions>
+
+                    <Button Content="Выход" Width="80"
+                        Command="{Binding BackwardCommand}"
+                        />
+
+                    <Button Grid.Column="1" Content="Далее" Width="80"
+                        Command="{Binding ForwardCommand}"
+                        >
+                    </Button>
+
+                </Grid>
+            </Grid>
+        </Grid>
+    </DataTemplate>
 </ResourceDictionary>
